- we got rid of header.gif. thanks a lot.

--- a/themes/standard/standard.css
+++ b/themes/standard/standard.css
@@ -444,7 +444,7 @@ table.admintable tr#cell3
 	cursor: default;
 	font-size: 12px;
 	font-weight: bold;
-	background: url(images/header.gif) repeat-x;
+	background: url(images/thback.gif) repeat-x;
 }
 
 .tr_header_small td
