- color of helpbox changed
git-svn-id: http://svn.gna.org/svn/clansuite/trunk@2862 34db09b4-2314-0410-a940-aec02a7c051d

--- a/themes/admin/admin.css
+++ b/themes/admin/admin.css
@@ -571,7 +571,7 @@ table.admintable tr#cell3
 {
     width: 350px;
     padding: 8px;
-    background: #DDF3F7;
+    background: #EEEEEE;
     border: 1px solid;
     border-color: #ffffff #ACA899 #ACA899 #ffffff;
     cursor: default;
