- minor fixes, renamed {move_to position=.} to {move_to target=..}

--- a/modules/menu/templates/help_de.html
+++ b/modules/menu/templates/help_de.html
@@ -3,7 +3,7 @@
 .Stil1 {color: #FF0000}
 -->
 </style>
-{move_to position="pre_head_close"}
+{move_to target="pre_head_close"}
 {literal}
 <style type="text/css">
 body { margin: 1em; padding: 0; background: #F1EFE2; color: #000000; font-family: georgia, tahoma, verdana; font-size: 11px; cursor: default; }
