--- a/modules/menu/templates/help.html
+++ b/modules/menu/templates/help.html
@@ -1,4 +1,4 @@
-{move_to position="pre_head_close"}
+{move_to target="pre_head_close"}
 {literal}
 <style type="text/css">
 body { margin: 1em; padding: 0; background: #F1EFE2; color: #000000; font-family: georgia, tahoma, verdana; font-size: 11px; cursor: default; }
