--- a/themes/admin/admin.css
+++ b/themes/admin/admin.css
@@ -199,6 +199,26 @@ a:hover
     font-weight: bold;
 }
 
+/* this defines the look of the red error box, for example: when an template is missing */
+.error {
+    background:#FFDDDD url(/themes/core/images/icons/error.png) no-repeat scroll 15px 12px;
+    border:1px solid #FFBBBB;
+    color:#BB0000;
+    font-weight:bold;
+    margin:0.5em 0 1em;
+    padding:15px 20px 15px 50px;
+}
+
+/* this defines the look of box, providing the link to the editor, if an template is missing */
+.create {
+    background:#DDFFDD url(/themes/core/images/icons/page_edit.png) no-repeat scroll 15px 12px;
+    border:1px solid #BBFFBB;
+    color:#00BB00;
+    font-weight:bold;
+    margin:0.5em 0 1em;
+    padding:15px 20px 15px 50px;
+}
+
 form input,
 form textarea,
 form select
