- added jQuery CSS-Theme: pepper-grinder
git-svn-id: http://svn.gna.org/svn/clansuite/trunk@3315 34db09b4-2314-0410-a940-aec02a7c051d

--- a/themes/admin/admin.css
+++ b/themes/admin/admin.css
@@ -4,7 +4,7 @@
 
     Created on : 11.05.2009 17:23
     Author     : vain@clansuite.com
-    Version    : SVN: $Id:$
+    Version    : SVN: $Id$
 
     Syntax recommendation http://www.w3.org/TR/REC-CSS2
 */
