--- a/themes/core/css/jquery-easyslider.css
+++ b/themes/core/css/jquery-easyslider.css
@@ -1,36 +1,37 @@
-/**
- * jQuery EasySlider CSS
- * SVN: $ID:
- */
 
-#slider{}
-#slider ul, #slider li{
+#slider ul, #slider li
+{
 	margin:0;
 	padding:0;
 	list-style:none;
 	}
-#slider li{
+#slider li
+{
 	width:696px;
 	height:241px;
 	overflow:hidden;
 	}
-#prevBtn, #nextBtn{
+#prevBtn, #nextBtn
+{
 	display:block;
 	width:30px;
 	height:77px;
-	position:absolute;
+	/*position:absolute;*/
 	left:-30px;
 	top:71px;
 	}
-#nextBtn{
+#nextBtn
+{
 	left:696px;
 	}
-#prevBtn a, #nextBtn a{
+#prevBtn a, #nextBtn a
+{
 	display:block;
 	width:30px;
 	height:77px;
 	background:url(images/btn_prev.gif) no-repeat 0 0;
 	}
-#nextBtn a{
+#nextBtn a
+{
 	background:url(images/btn_next.gif) no-repeat 0 0;
 	}
