- fixes for the accessible template - (1) added parameter target to all move_to's - (2) added head section in the index.tpl - still @todo: rename all templates, by prefixing "action_" or "action_admin"

--- a/themes/accessible/scripts/accessible.css
+++ b/themes/accessible/scripts/accessible.css
@@ -410,7 +410,7 @@ form select.input_text
     cursor: default;
     font-size: 12px;
     font-weight: bold;
-    background: url(images/td_header.gif) repeat-x;
+    background: url(../images/td_header.gif) repeat-x;
 }
 
 .tr_header td,
@@ -423,7 +423,7 @@ form select.input_text
     cursor: default;
     font-size: 12px;
     font-weight: bold;
-    background: url(images/td_header.gif) repeat-x;
+    background: url(../images/td_header.gif) repeat-x;
 }
 
 .tr_header_small td
