- added the filename and the module name of the template to display as smarty vars (smarty.renderer.php) - added both vars to the link of the templateeditor in template_not_found.tpl - some minor fixes to the templateeditor itself

--- a/libraries/codemirror/css/csscolors.css
+++ b/libraries/codemirror/css/csscolors.css
@@ -4,10 +4,12 @@
   font-family: monospace;
   font-size: 10pt;
   color: black;
+  z-index: auto;
 }
 
 pre.code, .editbox {
   color: #666666;
+  background-color: #cccccc;
 }
 
 .editbox p {
