- fixed method getFeed (available feedformats are RSS0.91, RSS1.0, RSS2.0, MBOX, OPML, ATOM, ATOM0.3, HTML, JS) - added newsfeeds widget with quick access links to some of these feedformats - fixed rssicon on standard/index.tpl - replaced several //--> with --> - added missing icons for easyslider - added missing css for uploadify - added style for active/inactive developers

--- a/themes/admin/admin.css
+++ b/themes/admin/admin.css
@@ -654,3 +654,14 @@ table.admintable tr#cell3
     padding: 5px;
     font-weight: bold;
 }
+
+/* ?mod=controlcenter&action=about : tab developers */
+.user_inactive
+{
+    background: #ed9e8e
+}
+
+.user_active
+{
+    background: #90ee90;
+}
