- added forms.css for styling
git-svn-id: http://svn.gna.org/svn/clansuite/trunk@3597 34db09b4-2314-0410-a940-aec02a7c051d

--- a/themes/backend/backend.css
+++ b/themes/backend/backend.css
@@ -1,6 +1,8 @@
 @charset "utf-8";
 /* CSS Document */
 
+@import url('/themes/core/css/form.css') all;
+
 html, body {
 background-color:#d7d6d6;
 padding:0;
