- added form.css to admintheme
git-svn-id: http://svn.gna.org/svn/clansuite/trunk@3607 34db09b4-2314-0410-a940-aec02a7c051d

--- a/themes/admin/admin.css
+++ b/themes/admin/admin.css
@@ -8,6 +8,9 @@
 
     Syntax recommendation http://www.w3.org/TR/REC-CSS2
 */
+
+@import url('/themes/core/css/form.css') all;
+
 body
 {
     margin: 0;
