--- a/themes/core/javascript/markitup/sets/default/style.css
+++ b/themes/core/javascript/markitup/sets/default/style.css
@@ -13,19 +13,75 @@
 }
 
 .markItUp .markItUpButton4 a {
-	background-image:url(images/picture.png); 
+	background-image:url(images/underline.png); 
 }
+
 .markItUp .markItUpButton5 a {
-	background-image:url(images/link.png);
+	background-image:url(images/fonts.png); 
 }
 
 .markItUp .markItUpButton6 a {
+	background-image:url(images/list-bullet.png); 
+}
+
+.markItUp .markItUpButton7 a {
+	background-image:url(images/list-numeric.png); 
+}
+
+.markItUp .indent a {
+	background-image:url(images/text_indent.png); 
+}
+
+.markItUp .alignments a {
+	background-image:url(images/text_align_left.png); 
+}
+	.markItUp .alignments .left a {
+		background-image:url(images/text_align_left.png); 
+	}
+	.markItUp .alignments .center a {
+		background-image:url(images/text_align_center.png); 
+	}
+	.markItUp .alignments .right a {
+		background-image:url(images/text_align_right.png); 
+	}
+	.markItUp .alignments .justify a {
+		background-image:url(images/text_align_justify.png); 
+	}
+
+.markItUp .padding a {
+	background-image:url(images/text_padding_left.png); 
+}
+	.markItUp .padding .left a {
+		background-image:url(images/text_padding_left.png);  
+	}
+	.markItUp .padding .top a {
+		background-image:url(images/text_padding_top.png);  
+	}
+	.markItUp .padding .right a {
+		background-image:url(images/text_padding_right.png);  
+	}
+	.markItUp .padding .bottom a {
+		background-image:url(images/text_padding_bottom.png); 
+	}
+	
+.markItUp .markItUpButton11 a {
+	background-image:url(images/picture.png); 
+}
+.markItUp .markItUpButton12 a {
+	background-image:url(images/link.png);
+}
+
+.markItUp .markItUpButton13 a {
+	background-image:url(images/quotes.png);
+}
+
+.markItUp .markItUpButton14 a {
+	background-image:url(images/code.png);
+}
+
+.markItUp .markItUpButton15 a {
 	background-image:url(images/clean.png);
 }
 .markItUp .preview a {
 	background-image:url(images/preview.png);
-}
-
-.markItUp {
-	margin-left:145px;
 }
