--- a/themes/core/javascript/markitup/skins/markitup/style.css
+++ b/themes/core/javascript/markitup/skins/markitup/style.css
@@ -4,16 +4,17 @@
 // ------------------------------------------------------------------*/
 .markItUp * {
 	margin:0px; padding:0px;
-	outline:none;
 }
+
+div.markItUp { margin-left:145px; }
+
 .markItUp a:link,
 .markItUp a:visited {
 	color:#000;
 	text-decoration:none;
 }
 .markItUp  {
-	width:700px;
-	margin:5px 0 5px 0;
+	margin:0;
 	border:5px solid #F5F5F5;	
 }
 .markItUpContainer  {
@@ -24,20 +25,20 @@
 }
 .markItUpEditor {
 	font:12px 'Courier New', Courier, monospace;
-	padding:5px 5px 5px 35px;
-	border:3px solid #3C769D;
-	width:643px;
+	padding:5px 5px 5px 5px;
+	border:1px solid #cccccc;
+	width:99.2%;
 	height:320px;
-	background-image:url(images/bg-editor.png);
 	background-repeat:no-repeat;
-	clear:both; display:block;
+	clear:both;
+	display:block;
 	line-height:18px;
 	overflow:auto;
 }
 .markItUpPreviewFrame	{
 	overflow:auto;
 	background-color:#FFFFFF;
-	border:1px solid #3C769D;
+	border:1px solid #cccccc;
 	width:99.9%;
 	height:300px;
 	margin:5px 0;
