--- a/themes/backend/backend.css
+++ b/themes/backend/backend.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /* CSS Document */
 
-@import url('/themes/core/css/form.css') all;
+@import url("/themes/core/css/form.css") all;
 
 
 html, body {
