- changed some css code
git-svn-id: http://svn.gna.org/svn/clansuite/trunk@3702 34db09b4-2314-0410-a940-aec02a7c051d

--- a/themes/core/css/form.css
+++ b/themes/core/css/form.css
@@ -5,8 +5,6 @@
 /* @import url("clansuite_buttons.css"); import clansuite button styles */
 @import url("ui_buttons.css"); /* import jquery ui button style */
 
-* { margin:0; padding:0; }
-
 form { clear:both; margin:10px; font-family:Arial, Verdana; font-size:12px; color:#000000; }
 fieldset { margin-bottom:10px; padding:10px; border:1px solid #666; }
 legend { padding:0px 5px 0px 5px; }
@@ -17,8 +15,8 @@ h2 { font-size:14px; font-weight:bold;}
 h3 { font-size:16px; font-weight:bold; }
 
 .formline { clear:both; padding:0px 0px 8px 0px; }
-.formline .inside { margin-left:140px; }
-label { float:left; width:140px; }
+div.formline div.inside { margin-left:200px; }
+label { float:left; min-width:200px; }
 
 span.formdescription { font-size:11px; color:#666666; }
 span.value { font-size:11px; margin-left:5px; }
