--- a/themes/core/css/form.css
+++ b/themes/core/css/form.css
@@ -15,7 +15,7 @@ h2 { font-size:14px; font-weight:bold;}
 h3 { font-size:16px; font-weight:bold; }
 
 .formline { clear:both; padding:0px 0px 8px 0px; }
-div.formline div.inside { margin-left:200px; }
+div.formline div.forminside { margin-left:200px; }
 label { float:left; min-width:200px; }
 
 span.formdescription { font-size:11px; color:#666666; }
