- fixed a path problem with the css import
git-svn-id: http://svn.gna.org/svn/clansuite/trunk@3735 34db09b4-2314-0410-a940-aec02a7c051d

--- a/themes/admin/admin.css
+++ b/themes/admin/admin.css
@@ -9,7 +9,7 @@
     Syntax recommendation http://www.w3.org/TR/REC-CSS2
 */
 
-@import url('/themes/core/css/form.css') all;
+@import url('../core/css/form.css') all;
 
 body
 {
