--- a/themes/standard/standard.css
+++ b/themes/standard/standard.css
@@ -4,7 +4,7 @@
 
     Created on : 11.05.2009 17:23
     Author     : vain@clansuite.com
-    Version    : SVN: $Id:$
+    Version    : SVN: $Id$
 
     Syntax recommendation http://www.w3.org/TR/REC-CSS2
 */
