--- a/themes/shades_of_gray/standard.css
+++ b/themes/shades_of_gray/standard.css
@@ -14,7 +14,7 @@ Feel free to use and modify but please provide credits.
 	padding: 0;
 }
 
-a {text-decoration: none;}
+a {text-decoration: none; color:#ccc;}
 
 body {
 	background: #111 url(images/bg.jpg) repeat-y center top;
