--- a/installation/installation.css
+++ b/installation/installation.css
@@ -1,6 +1,6 @@
 /* $Id$ */
 #wrapper { width:1000px; margin-left:auto; margin-right:auto; }
-#rightpage { float:left; width:170px; background-image:url(images/rightbox-bg.png); background-repeat:repeat-y; }
+#rightpage { margin-left:820px; width:170px; background-image:url(images/rightbox-bg.png); background-repeat:repeat-y; position:fixed; top:20px; }
 #rightpage #top { height:21px; background-image:url(images/rightbox-top.png); background-position:top right; background-repeat:no-repeat; }
 #rightpage #bottom { height:19px; background-image:url(images/rightbox-bottom.png); background-position:bottom; background-repeat:no-repeat; }
 #rightinner { padding-left:15px; padding-right:15px; }
