added a border to contentpart
git-svn-id: http://svn.gna.org/svn/clansuite/trunk@3763 34db09b4-2314-0410-a940-aec02a7c051d

--- a/installation/installation.css
+++ b/installation/installation.css
@@ -121,7 +121,7 @@ body {
 {
   float:left;
   padding:90px 31px 10px;
-  width:160px;
+  width:145px;
 }
 
 .left
@@ -352,10 +352,10 @@ dl dt
 {
   border:0;
   margin: 10px 1px 0px 0px;
-  padding-left: 10px;
   min-height:400px;
   z-index:0;
   width:570px;
+  border-left:1px solid #ccc;
 }
 
 #content_middle
