--- a/installation/installation.css
+++ b/installation/installation.css
@@ -3,7 +3,14 @@
 #rightpage { margin-left:820px; width:170px; background-image:url(images/rightbox-bg.png); background-repeat:repeat-y; position:fixed; top:20px; }
 #rightpage #top { height:21px; background-image:url(images/rightbox-top.png); background-position:top right; background-repeat:no-repeat; }
 #rightpage #bottom { height:19px; background-image:url(images/rightbox-bottom.png); background-position:bottom; background-repeat:no-repeat; }
-#rightinner { padding-left:15px; padding-right:15px; }
+#rightinner
+{
+    text-align: left;
+    padding-left:15px; 
+    padding-right:15px;
+    margin-left: 10px;
+    margin-right: 7px;
+}
 
 .install
 {
@@ -37,7 +44,7 @@
   color:#FFF;
   font-size:12px;
   font-weight:700;
-  margin-bottom:5px;
+  margin-bottom:6px;
   padding:10px;
 }
 
@@ -48,7 +55,7 @@
   color:#999;
   font-size:12px;
   font-weight:700;
-  margin-bottom:5px;
+  margin-bottom:6px;
   padding:10px;
 }
 
@@ -59,7 +66,7 @@
   color:#FFF;
   font-size:12px;
   font-weight:700;
-  margin-bottom:5px;
+  margin-bottom:6px;
   padding:10px;
 }
 
@@ -68,9 +75,7 @@
   border:1px solid #CCC;
   font-size:5px;
   padding:2px;
-  position:relative;
-  right:0;
-  width:133px;
+  width: 100px;
 }
 
 #description
@@ -120,10 +125,10 @@ body {
 #sidebar
 {
   float:left;
-  padding-left:25px;
-  padding-right:20px;
-  padding-top:90px;
-  padding-bottom:10px;
+  margin-left: 10px;
+  padding-top: 90px;
+  padding-left: 20px;
+  padding-right: 15px;
   width:160px;
 }
 
@@ -352,20 +357,31 @@ dl dt
 }
 
 #content
-{
-  border:0;
-  margin: 10px 1px 0px 0px;
+{ 
+  border-bottom-width:20px;
+  margin-bottom:10px;
+  margin-left:17px;
+  margin-right:10px;
+  margin-top:10px;
+  
+  padding-bottom:10px;
+  padding-left:20px;
+  padding-right:17px;
+  padding-top:10px;
+  
+  width:540px;
+
   min-height:400px;
   z-index:0;
-  width:570px;
-  border-left:1px solid #ccc;
+
+  border-left:1px solid #ddd;
+  border-right:1px solid #ddd;
 }
 
 #content_middle
 {
   border:0;
   font-size:12px;
-  margin-left:-10px;
   width:100%;
   z-index:0;
 }
