--- a/installation/installation.css
+++ b/installation/installation.css
@@ -1,12 +1,50 @@
 /* $Id$ */
-#wrapper { width:1000px; margin-left:auto; margin-right:auto; }
-#rightpage { margin-left:820px; width:170px; background-image:url(images/rightbox-bg.png); background-repeat:repeat-y; position:fixed; top:20px; }
-#rightpage #top { height:21px; background-image:url(images/rightbox-top.png); background-position:top right; background-repeat:no-repeat; }
-#rightpage #bottom { height:19px; background-image:url(images/rightbox-bottom.png); background-position:bottom; background-repeat:no-repeat; }
+#wrapper {
+    width:1000px;
+    margin-left:auto;
+    margin-right:auto;
+}
+
+#rightpage {
+    margin-left:820px;
+    width:170px;
+    background-image:url(images/rightbox-bg.png);
+    background-repeat:repeat-y;
+    position:fixed;
+    top: 20px;
+}
+
+#rightpage #top {
+    height:21px;
+    background-image:url(images/rightbox-top.png);
+    background-position:top right;
+    background-repeat:no-repeat;
+}
+
+#rightpage #bottom {
+    height:15px;
+    background:url(images/rightbox-bottom.png); 
+    background-position:bottom;
+    background-repeat:no-repeat;
+}
+
+/*
+#rightpage #bottomleft {
+    height:20px;
+    background:url(images/kubrickfooter.png) no-repeat scroll 0 -40px;
+}
+
+#rightpage #bottomright {
+    height:20px;
+    background:url(images/kubrickfooter.png) no-repeat scroll -650px -40px;
+    float:left;
+}
+*/
+
 #rightinner
 {
     text-align: left;
-    padding-left:15px; 
+    padding-left:15px;
     padding-right:15px;
     margin-left: 10px;
     margin-right: 7px;
@@ -357,18 +395,18 @@ dl dt
 }
 
 #content
-{ 
+{
   border-bottom-width:20px;
   margin-bottom:10px;
   margin-left:17px;
   margin-right:10px;
   margin-top:10px;
-  
+
   padding-bottom:10px;
   padding-left:20px;
   padding-right:17px;
   padding-top:10px;
-  
+
   width:540px;
 
   min-height:420px;
@@ -387,7 +425,7 @@ dl dt
 }
 
 #content_footer
-{  
+{
   font-size:12px;
   min-height:85px;
   z-index:0;
