--- a/themes/backend/backend.css
+++ b/themes/backend/backend.css
@@ -1,7 +1,8 @@
 @charset "utf-8";
 /* CSS Document */
 
-@import url("..core/css/form.css") all;
+@import url("../core/css/form.css") all;
+@import url("../core/css/ui_buttons.css") all;
 
 
 html, body {
