--- a/themes/core/css/datagrid.css
+++ b/themes/core/css/datagrid.css
@@ -56,6 +56,10 @@
 .Datagrid th
 {
     border: 1px solid grey;
+    border-color:#FFFFFF #ACA899 #ACA899 #FFFFFF;
+    border-style:solid;
+    border-width:1px;
+    cursor:default;
     padding: 4px;
 }
 
@@ -72,7 +76,7 @@
 
 .DatagridRow.Alternate
 {
-    background-color: #D8D8BF;
+    background-color: #DFDFC6;
 }
 
 .DatagridRow.DatagridRowSelected
@@ -83,4 +87,31 @@
 .DatagridRow.DatagridRowHover
 {
     background-color: #FFFFFF;
+}
+
+.ColHeader
+{
+    background:url("../images/thback.gif") repeat-x scroll 0 0 transparent;
+    border-color:#FFFFFF #ACA899 #ACA899 #FFFFFF;
+    border-style:solid;
+    border-width:1px;
+    cursor:default;
+    font-size:12px;
+    font-weight:bold;
+    padding:5px;
+}
+
+.Pages a span {
+    text-decoration: underline;
+}
+
+.Pages a:hover span {
+    text-decoration: none;
+}
+
+.Pages .Active,
+.Pages .Inactive {
+    display: block;
+    width: 13px;
+    float: left;
 }
