added categories datagrid (alpha - needs a bit more love)
git-svn-id: http://svn.gna.org/svn/clansuite/trunk@4082 34db09b4-2314-0410-a940-aec02a7c051d

--- a/themes/core/css/datagrid.css
+++ b/themes/core/css/datagrid.css
@@ -69,27 +69,50 @@
     padding: 2px;
 }
 
+.Datagrid .Pages .PagerDescription
+{
+    display: block;
+    float: left;
+    padding-right: 3px;
+    font-weight: bold;
+}
+
+.Datagrid .Pages a span {
+    text-decoration: underline;
+}
+
+.Datagrid .Pages a:hover span {
+    text-decoration: none;
+}
+
+.Datagrid .Pages .Active,
+.Datagrid .Pages .Inactive {
+    display: block;
+    width: 13px;
+    float: left;
+}
+
 .Datagrid .ResultsPerPage
 {
     float: right;
 }
 
-.DatagridRow.Alternate
+.Datagrid .DatagridRow.Alternate
 {
     background-color: #DFDFC6;
 }
 
-.DatagridRow.DatagridRowSelected
+.Datagrid .DatagridRow.DatagridRowSelected
 {
     background-color: #FFFF00;
 }
 
-.DatagridRow.DatagridRowHover
+.Datagrid .DatagridRow.DatagridRowHover
 {
     background-color: #FFFFFF;
 }
 
-.ColHeader
+.Datagrid .ColHeader
 {
     background:url("../images/thback.gif") repeat-x scroll 0 0 transparent;
     border-color:#FFFFFF #ACA899 #ACA899 #FFFFFF;
@@ -101,17 +124,10 @@
     padding:5px;
 }
 
-.Pages a span {
-    text-decoration: underline;
-}
-
-.Pages a:hover span {
-    text-decoration: none;
-}
-
-.Pages .Active,
-.Pages .Inactive {
-    display: block;
-    width: 13px;
-    float: left;
+.Datagrid .DatagridCell-NoResults
+{
+    font-weight: bold;
+    text-align: center;
+    font-size: 12px;
+    height: 40px;
 }
