--- a/themes/core/css/debug.css
+++ b/themes/core/css/debug.css
@@ -1,9 +1,68 @@
-        div.debug_one, caption { cursor: pointer; width: auto; font-variant: small-caps; font-family: Verdana; font-size: 11px; height: 8px; text-align:left; font-weight:bold; padding: 8px; background: #ECE9D8; border-top: 1px solid #ffffff; border-bottom: 1px solid #ACA899;  }
-        col.debug_one         { background-color: #eeeeee; }
-        col.debug_two         { background-color: #fafafa; }
-        dl.debug_dl { padding: 0; margin: 0; }
-        dt.debug_initial      { border-left:8px solid #cc9966; padding: 3px 10px 3px 5px; background-color: white; font-family: Verdana; font-size: 11px; }
-        dt.debug_second      { border-left:8px solid #cc9966; padding: 3px 10px 3px 5px; background-color: #cccccc; font-weight: bold; font-family: Verdana; font-size: 11px; }
-        div.debug_wrapper { margin: auto; width: 80%; border: padding: 8px; background: #ECE9D8; border: 1px solid; border-color: #ffffff #ACA899 #ACA899 #ffffff; font-family: Verdana; font-size: 11px; }
-        h2.debug_heading { text-align: center; color: grey; }
-        div.debug_inline { padding: 0px; width: 100%;background: #ECE9D8; border-top: 1px solid #ffffff; border-bottom: 1px solid #ACA899; }
+div.debug_one,caption {
+    background:#ECE9D8;
+    border-bottom:1px solid #ACA899;
+    border-top:1px solid #fff;
+    cursor:pointer;
+    font-family:Verdana;
+    font-size:11px;
+    font-variant:small-caps;
+    font-weight:700;
+    height:8px;
+    padding:8px;
+    text-align:left;
+    width:auto;
+}
+
+col.debug_one {
+    background:#eee;
+}
+
+col.debug_two {
+    background:#fafafa;
+}
+
+dl.debug_dl {
+    margin:0;
+    padding:0;
+}
+
+dt.debug_initial {
+    background:#FFF;
+    border-left:8px solid #c96;
+    font-family:Verdana;
+    font-size:11px;
+    padding:3px 10px 3px 5px;
+}
+
+dt.debug_second {
+    background:#ccc;
+    border-left:8px solid #c96;
+    font-family:Verdana;
+    font-size:11px;
+    font-weight:700;
+    padding:3px 10px 3px 5px;
+}
+
+div.debug_wrapper {
+    background:#ECE9D8;
+    border:1px solid;
+    border-color:#fff #ACA899 #ACA899 #fff;
+    font-family:Verdana;
+    font-size:11px;
+    margin:auto;
+    padding:8px;
+    width:80%;
+}
+
+h2.debug_heading {
+    color:grey;
+    text-align:center;
+}
+
+div.debug_inline {
+    background:#ECE9D8;
+    border-bottom:1px solid #ACA899;
+    border-top:1px solid #fff;
+    padding:0;
+    width:100%;
+}
