--- a/themes/core/css/tabs.css
+++ b/themes/core/css/tabs.css
@@ -1,5 +1,5 @@
 /*
- * jQuery Styles for YAML.de
+ * jQuery Styles
  *
  */
 
@@ -45,7 +45,13 @@
 
     .tabs ul li a:focus,
     .tabs ul li a:hover,
-    .tabs ul li a:active { background: #fff; font-weight: bold; color: #666; text-decoration: none; border-bottom: 0px #eee solid; }
+    .tabs ul li a:active { 
+        background: #fff;
+        font-weight: bold;
+        color: #666;
+        text-decoration: none;
+        border-bottom: 0px #eee solid;
+    }
 
     .tabs ul li.current a,
     .tabs ul li.current a:focus,
